--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@glimmer/tracking": "^1.0.4",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
+    "ember-animated": "^0.11.0",
     "ember-auto-import": "^1.11.3",
     "ember-cli": "~3.28.4",
     "ember-cli-app-version": "^5.0.0",
@@ -36,6 +37,7 @@
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-htmlbars": "^5.7.1",
     "ember-cli-inject-live-reload": "^2.1.0",
+    "ember-cli-mirage": "^2.3.2",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
     "ember-data": "~3.28.0",
